Completed association rules learning of job skills and modified codes.

--- a/code/skill_analysis.ipynb
+++ b/code/skill_analysis.ipynb
@@ -20,11 +20,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"C:\\\\Users\\\\LENOVO\\\\WPSDrive\\\\569704374\\\\WPS云盘\\\\数据挖掘\\\\JobDataMining\\\\data\\\\task3\\\\jobdata_get_skills.csv\")"
+    "df = pd.read_csv(\"..\\\\data\\\\task3\\\\jobdata_get_skills.csv\")"
    ]
   },
   {
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -185,13 +185,13 @@
     "for i, v in enumerate(hard_skill_counts):\n",
     "    plt.text(v + 0.1, i, str(v), va='center', color='black')\n",
     "\n",
-    "output_path = os.path.join(\"C:\\\\Users\\\\LENOVO\\\\WPSDrive\\\\569704374\\\\WPS云盘\\\\数据挖掘\\\\JobDataMining\\\\img\\\\task3\", \"硬技能频数统计.png\")\n",
+    "output_path = os.path.join(\"..\\\\img\\\\task3\", \"硬技能频数统计.png\")\n",
     "plt.savefig(output_path, dpi = 300, bbox_inches='tight')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
     "for i, v in enumerate(soft_skill_counts):\n",
     "    plt.text(v + 0.1, i, str(v), va='center', color='black')\n",
     "\n",
-    "output_path = os.path.join(\"C:\\\\Users\\\\LENOVO\\\\WPSDrive\\\\569704374\\\\WPS云盘\\\\数据挖掘\\\\JobDataMining\\\\img\\\\task3\", \"软技能频数统计.png\")\n",
+    "output_path = os.path.join(\"..\\\\img\\\\task3\", \"软技能频数统计.png\")\n",
     "plt.savefig(output_path, dpi = 300, bbox_inches='tight')"
    ]
   },
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -378,13 +378,13 @@
     "plt.gca().invert_yaxis() \n",
     "plt.tight_layout()\n",
     "\n",
-    "output_path = os.path.join(\"C:\\\\Users\\\\LENOVO\\\\WPSDrive\\\\569704374\\\\WPS云盘\\\\数据挖掘\\\\JobDataMining\\\\img\\\\task3\", \"新媒体运营岗要求的硬技能.png\")\n",
+    "output_path = os.path.join(\"..\\\\img\\\\task3\", \"新媒体运营岗要求的硬技能.png\")\n",
     "plt.savefig(output_path, dpi = 300, bbox_inches='tight')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
     "plt.gca().invert_yaxis() \n",
     "plt.tight_layout()\n",
     "\n",
-    "output_path = os.path.join(\"C:\\\\Users\\\\LENOVO\\\\WPSDrive\\\\569704374\\\\WPS云盘\\\\数据挖掘\\\\JobDataMining\\\\img\\\\task3\", \"产品经理岗要求的硬技能.png\")\n",
+    "output_path = os.path.join(\"..\\\\img\\\\task3\", \"产品经理岗要求的硬技能.png\")\n",
     "plt.savefig(output_path, dpi=300, bbox_inches='tight')"
    ]
   },
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -502,13 +502,13 @@
     "plt.gca().invert_yaxis() \n",
     "plt.tight_layout()\n",
     "\n",
-    "output_path = os.path.join(\"C:\\\\Users\\\\LENOVO\\\\WPSDrive\\\\569704374\\\\WPS云盘\\\\数据挖掘\\\\JobDataMining\\\\img\\\\task3\", \"新媒体运营岗要求的软技能.png\")\n",
+    "output_path = os.path.join(\"..\\\\img\\\\task3\", \"新媒体运营岗要求的软技能.png\")\n",
     "plt.savefig(output_path, dpi = 300, bbox_inches='tight')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
     "plt.gca().invert_yaxis() \n",
     "plt.tight_layout()\n",
     "\n",
-    "output_path = os.path.join(\"C:\\\\Users\\\\LENOVO\\\\WPSDrive\\\\569704374\\\\WPS云盘\\\\数据挖掘\\\\JobDataMining\\\\img\\\\task3\", \"产品经理岗要求的软技能.png\")\n",
+    "output_path = os.path.join(\"..\\\\img\\\\task3\", \"产品经理岗要求的软技能.png\")\n",
     "plt.savefig(output_path, dpi=300, bbox_inches='tight')"
    ]
   },
@@ -647,13 +647,13 @@
     "plt.gca().invert_yaxis() \n",
     "plt.tight_layout()\n",
     "\n",
-    "output_path = os.path.join(\"C:\\\\Users\\\\LENOVO\\\\WPSDrive\\\\569704374\\\\WPS云盘\\\\数据挖掘\\\\JobDataMining\\\\img\\\\task3\", \"国企要求的硬技能.png\")\n",
+    "output_path = os.path.join(\"..\\\\img\\\\task3\", \"国企要求的硬技能.png\")\n",
     "plt.savefig(output_path, dpi = 300, bbox_inches='tight')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +680,7 @@
     "plt.gca().invert_yaxis() \n",
     "plt.tight_layout()\n",
     "\n",
-    "output_path = os.path.join(\"C:\\\\Users\\\\LENOVO\\\\WPSDrive\\\\569704374\\\\WPS云盘\\\\数据挖掘\\\\JobDataMining\\\\img\\\\task3\", \"民营要求的硬技能.png\")\n",
+    "output_path = os.path.join(\"..\\\\img\\\\task3\", \"民营要求的硬技能.png\")\n",
     "plt.savefig(output_path, dpi = 300, bbox_inches='tight')"
    ]
   },
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -771,13 +771,13 @@
     "plt.gca().invert_yaxis() \n",
     "plt.tight_layout()\n",
     "\n",
-    "output_path = os.path.join(\"C:\\\\Users\\\\LENOVO\\\\WPSDrive\\\\569704374\\\\WPS云盘\\\\数据挖掘\\\\JobDataMining\\\\img\\\\task3\", \"国企要求的软技能.png\")\n",
+    "output_path = os.path.join(\"..\\\\img\\\\task3\", \"国企要求的软技能.png\")\n",
     "plt.savefig(output_path, dpi=300, bbox_inches='tight')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -804,7 +804,7 @@
     "plt.gca().invert_yaxis() \n",
     "plt.tight_layout()\n",
     "\n",
-    "output_path = os.path.join(\"C:\\\\Users\\\\LENOVO\\\\WPSDrive\\\\569704374\\\\WPS云盘\\\\数据挖掘\\\\JobDataMining\\\\img\\\\task3\", \"民营要求的软技能.png\")\n",
+    "output_path = os.path.join(\"..\\\\img\\\\task3\", \"民营要求的软技能.png\")\n",
     "plt.savefig(output_path, dpi = 300, bbox_inches='tight')"
    ]
   },
@@ -975,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1002,13 +1002,13 @@
     "plt.xlim(0, 1000000)\n",
     "plt.gca().xaxis.set_major_locator(MultipleLocator(50000))\n",
     "\n",
-    "output_path_hard = os.path.join(\"C:\\\\Users\\\\LENOVO\\\\WPSDrive\\\\569704374\\\\WPS云盘\\\\数据挖掘\\\\JobDataMining\\\\img\\\\task3\", \"固定用工下各硬技能要求的薪资分布.png\")\n",
+    "output_path_hard = os.path.join(\"..\\\\img\\\\task3\", \"固定用工下各硬技能要求的薪资分布.png\")\n",
     "plt.savefig(output_path_hard, dpi=300, bbox_inches='tight')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1036,7 +1036,7 @@
     "plt.xlim(0, 1000000)\n",
     "plt.gca().xaxis.set_major_locator(MultipleLocator(50000))\n",
     "\n",
-    "output_path_hard = os.path.join(\"C:\\\\Users\\\\LENOVO\\\\WPSDrive\\\\569704374\\\\WPS云盘\\\\数据挖掘\\\\JobDataMining\\\\img\\\\task3\", \"固定用工下各软技能要求的薪资分布.png\")\n",
+    "output_path_hard = os.path.join(\"..\\\\img\\\\task3\", \"固定用工下各软技能要求的薪资分布.png\")\n",
     "plt.savefig(output_path_hard, dpi=300, bbox_inches='tight')"
    ]
   },
@@ -1122,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1149,13 +1149,13 @@
     "plt.gca().invert_yaxis() \n",
     "plt.tight_layout()\n",
     "\n",
-    "output_path = os.path.join(\"C:\\\\Users\\\\LENOVO\\\\WPSDrive\\\\569704374\\\\WPS云盘\\\\数据挖掘\\\\JobDataMining\\\\img\\\\task3\", \"本科生被要求的硬技能.png\")\n",
+    "output_path = os.path.join(\"..\\\\img\\\\task3\", \"本科生被要求的硬技能.png\")\n",
     "plt.savefig(output_path, dpi = 300, bbox_inches='tight')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1186,7 +1186,7 @@
     "plt.gca().invert_yaxis() \n",
     "plt.tight_layout()\n",
     "\n",
-    "output_path = os.path.join(\"C:\\\\Users\\\\LENOVO\\\\WPSDrive\\\\569704374\\\\WPS云盘\\\\数据挖掘\\\\JobDataMining\\\\img\\\\task3\", \"硕士生被要求的硬技能.png\")\n",
+    "output_path = os.path.join(\"..\\\\img\\\\task3\", \"硕士生被要求的硬技能.png\")\n",
     "plt.savefig(output_path, dpi = 300, bbox_inches='tight')"
    ]
   },
@@ -1244,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1271,7 +1271,7 @@
     "plt.gca().invert_yaxis() \n",
     "plt.tight_layout()\n",
     "\n",
-    "output_path = os.path.join(\"C:\\\\Users\\\\LENOVO\\\\WPSDrive\\\\569704374\\\\WPS云盘\\\\数据挖掘\\\\JobDataMining\\\\img\\\\task3\", \"本科生被要求的软技能.png\")\n",
+    "output_path = os.path.join(\"..\\\\img\\\\task3\", \"本科生被要求的软技能.png\")\n",
     "plt.savefig(output_path, dpi = 300, bbox_inches='tight')"
    ]
   },
@@ -1308,7 +1308,7 @@
     "plt.gca().invert_yaxis() \n",
     "plt.tight_layout()\n",
     "\n",
-    "output_path = os.path.join(\"C:\\\\Users\\\\LENOVO\\\\WPSDrive\\\\569704374\\\\WPS云盘\\\\数据挖掘\\\\JobDataMining\\\\img\\\\task3\", \"硕士生被要求的软技能.png\")\n",
+    "output_path = os.path.join(\"..\\\\img\\\\task3\", \"硕士生被要求的软技能.png\")\n",
     "plt.savefig(output_path, dpi = 300, bbox_inches='tight')"
    ]
   },
@@ -1372,7 +1372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1421,7 +1421,7 @@
     "plt.gca().invert_yaxis() \n",
     "plt.tight_layout()\n",
     "\n",
-    "output_path = os.path.join(\"C:\\\\Users\\\\LENOVO\\\\WPSDrive\\\\569704374\\\\WPS云盘\\\\数据挖掘\\\\JobDataMining\\\\img\\\\task3\", \"经验不限+1年以下经验要求被要求的硬技能.png\")\n",
+    "output_path = os.path.join(\"..\\\\img\\\\task3\", \"经验不限+1年以下经验要求被要求的硬技能.png\")\n",
     "plt.savefig(output_path, dpi = 300, bbox_inches='tight')"
    ]
   },
@@ -1471,7 +1471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1520,7 +1520,7 @@
     "plt.gca().invert_yaxis() \n",
     "plt.tight_layout()\n",
     "\n",
-    "output_path = os.path.join(\"C:\\\\Users\\\\LENOVO\\\\WPSDrive\\\\569704374\\\\WPS云盘\\\\数据挖掘\\\\JobDataMining\\\\img\\\\task3\", \"经验不限+1年以下经验要求被要求的软技能.png\")\n",
+    "output_path = os.path.join(\"..\\\\img\\\\task3\", \"经验不限+1年以下经验要求被要求的软技能.png\")\n",
     "plt.savefig(output_path, dpi = 300, bbox_inches='tight')"
    ]
   },
