Completed opinion identification, add prompts and modified codes.

--- a/code/mapping_jsonl.ipynb
+++ b/code/mapping_jsonl.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,12 +15,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 完成 llm 调用后输出结果的映射"
+    "# 技能部分结果映射"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 完成 llm 调用后输出结果的映射"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +136,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 完成结果与招聘信息 id 的映射"
+    "## 完成结果与招聘信息 id 的映射"
    ]
   },
   {
@@ -326,6 +333,368 @@
    "outputs": [],
    "source": [
     "processed_df.to_csv('..\\\\data\\\\task3\\\\jobdata_get_skills.csv', index=False, encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 态度 -> 观点部分映射处理"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Batch columns: ['id', 'custom_id', 'response', 'error']\n",
+      "Part columns: ['custom_id', 'method', 'url', 'body']\n",
+      "Batch columns: ['id', 'custom_id', 'response', 'error']\n",
+      "Part columns: ['custom_id', 'method', 'url', 'body']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 文件路径列表\n",
+    "batch_files = [\n",
+    "    \"..\\\\data\\\\task4\\\\batch_part1_output.jsonl\",\n",
+    "    \"..\\\\data\\\\task4\\\\batch_part1_output.jsonl\"\n",
+    "]\n",
+    "\n",
+    "part_files = [\n",
+    "    \"..\\\\data\\\\task4\\\\part1.jsonl\",\n",
+    "    \"..\\\\data\\\\task4\\\\part2.jsonl\"\n",
+    "]\n",
+    "\n",
+    "if len(batch_files) != len(part_files):\n",
+    "    raise ValueError(\"The number of batch files and part files must match!\")\n",
+    "\n",
+    "merged_dfs = [mapping_files(batch, part) for batch, part in zip(batch_files, part_files)]\n",
+    "final_merged_df = combine_merged_dataframes(merged_dfs)\n",
+    "\n",
+    "final_merged_df.to_json('..\\\\data\\\\task4\\\\merged_opinions.jsonl', orient='records', lines=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_merged_file = \"..\\\\data\\\\task4\\\\merged_opinions.jsonl\"\n",
+    "zhihudata_with_id = \"..\\\\data\\\\attitudes_zhihu_with_ids.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>custom_id</th>\n",
+       "      <th>agree</th>\n",
+       "      <th>disagree</th>\n",
+       "      <th>neutral</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AkDAFULrD7GTJdWvSE8TN</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[journalism-favors-new-media-jobs, tier-1-citi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>sViYNRTOSjTcxXPEL2ykH</td>\n",
+       "      <td>[journalism-favors-new-media-jobs, experience-...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[tier-1-cities-offer-more-jobs, education-leve...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>aD9e51cniLKXotH1AyMZ2</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[journalism-favors-new-media-jobs, tier-1-citi...</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3S51njyrremig0DMNLY-S</td>\n",
+       "      <td>[journalism-favors-new-media-jobs]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[tier-1-cities-offer-more-jobs, experience-mat...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>r4ro9pzQ9xvmrlj0wIuMn</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[journalism-favors-new-media-jobs, tier-1-citi...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               custom_id                                              agree  \\\n",
+       "0  AkDAFULrD7GTJdWvSE8TN                                                 []   \n",
+       "1  sViYNRTOSjTcxXPEL2ykH  [journalism-favors-new-media-jobs, experience-...   \n",
+       "2  aD9e51cniLKXotH1AyMZ2                                                 []   \n",
+       "3  3S51njyrremig0DMNLY-S                 [journalism-favors-new-media-jobs]   \n",
+       "4  r4ro9pzQ9xvmrlj0wIuMn                                                 []   \n",
+       "\n",
+       "                                            disagree  \\\n",
+       "0                                                 []   \n",
+       "1                                                 []   \n",
+       "2  [journalism-favors-new-media-jobs, tier-1-citi...   \n",
+       "3                                                 []   \n",
+       "4                                                 []   \n",
+       "\n",
+       "                                             neutral  \n",
+       "0  [journalism-favors-new-media-jobs, tier-1-citi...  \n",
+       "1  [tier-1-cities-offer-more-jobs, education-leve...  \n",
+       "2                                                 []  \n",
+       "3  [tier-1-cities-offer-more-jobs, experience-mat...  \n",
+       "4  [journalism-favors-new-media-jobs, tier-1-citi...  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "content_data = []\n",
+    "\n",
+    "with open(final_merged_file, 'r', encoding='utf-8') as file:\n",
+    "    for line_number, line in enumerate(file, 1):\n",
+    "        try:\n",
+    "            record = json.loads(line)\n",
+    "            \n",
+    "            # 检查 'custom_id' 和 'response' 是否存在\n",
+    "            if 'custom_id' in record and 'response' in record:\n",
+    "                response_body = record['response'].get('body', {})\n",
+    "                choices = response_body.get('choices', [])\n",
+    "        \n",
+    "                if choices:  # 确保 choices 存在且非空\n",
+    "                    message = choices[0].get('message', {})\n",
+    "                    content = message.get('content', '')\n",
+    "\n",
+    "                    if content:  # 确保 content 存在\n",
+    "                        try:\n",
+    "                            decoded_content = json.loads(content) \n",
+    "                            content_data.append({\n",
+    "                                'custom_id': record['custom_id'],\n",
+    "                                'agree': decoded_content.get('agree', []),\n",
+    "                                'disagree': decoded_content.get('disagree', []), \n",
+    "                                'neutral': decoded_content.get('neutral', [])\n",
+    "                            })\n",
+    "                        except json.JSONDecodeError as e:\n",
+    "                            print(f\"JSONDecodeError at line {line_number}: {e}\")\n",
+    "                    else:\n",
+    "                        print(f\"No content found in message for custom_id: {record['custom_id']} (line {line_number})\")\n",
+    "                else:\n",
+    "                    print(f\"No choices found in body for custom_id: {record['custom_id']} (line {line_number})\")\n",
+    "            else:\n",
+    "                print(f\"Missing 'custom_id' or 'response' at line {line_number}\")\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error at line {line_number}: {e}\")\n",
+    "\n",
+    "final_content_df = pd.DataFrame(content_data)\n",
+    "\n",
+    "final_content_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Columns after renaming and cleaning: Index(['custom_id', 'content', 'agree', 'disagree', 'neutral'], dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "zhihudata_df = pd.read_csv(zhihudata_with_id)\n",
+    "\n",
+    "# 确保 ID 对应一致\n",
+    "if 'id' in zhihudata_df.columns:\n",
+    "    zhihudata_df.rename(columns={'id': 'custom_id'}, inplace=True)\n",
+    "\n",
+    "# 添加空列\n",
+    "zhihudata_df['agree'] = None\n",
+    "zhihudata_df['disagree'] = None\n",
+    "zhihudata_df['neutral'] = None\n",
+    "\n",
+    "# 合并数据\n",
+    "merged_df = zhihudata_df.merge(final_content_df, on='custom_id', how='inner', suffixes=('_zhihudata', '_final'))\n",
+    "\n",
+    "if 'agree_final' in merged_df.columns:\n",
+    "    merged_df.rename(columns={\n",
+    "        'agree_final': 'agree',\n",
+    "        'disagree_final': 'disagree',\n",
+    "        'neutral_final' : 'neutral'\n",
+    "    }, inplace=True)\n",
+    "\n",
+    "merged_df.drop(columns=['agree_zhihudata', 'disagree_zhihudata', 'neutral_zhihudata'], inplace=True, errors='ignore')\n",
+    "print(\"Columns after renaming and cleaning:\", merged_df.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>custom_id</th>\n",
+       "      <th>content</th>\n",
+       "      <th>agree</th>\n",
+       "      <th>disagree</th>\n",
+       "      <th>neutral</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AkDAFULrD7GTJdWvSE8TN</td>\n",
+       "      <td>报纸 科技媒体 互联网</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[journalism-favors-new-media-jobs, tier-1-citi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>sViYNRTOSjTcxXPEL2ykH</td>\n",
+       "      <td>知乎的神奇之处在于，会帮你记录来时的路时间来到了2024，距离第二次回答也已经3年，真弹指一...</td>\n",
+       "      <td>[journalism-favors-new-media-jobs, experience-...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[tier-1-cities-offer-more-jobs, education-leve...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>aD9e51cniLKXotH1AyMZ2</td>\n",
+       "      <td>21年毕业的，这几天面临失业危机了，想找几个同学问问他们的现状，了解一下新闻学的就业行情。当...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[journalism-favors-new-media-jobs, tier-1-citi...</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3S51njyrremig0DMNLY-S</td>\n",
+       "      <td>目前刚被录取，还没入学军训我知道社会对新闻学的评价哈哈哈哈哈被调剂来的，是命运让我来到这里～...</td>\n",
+       "      <td>[journalism-favors-new-media-jobs]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[tier-1-cities-offer-more-jobs, experience-mat...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>r4ro9pzQ9xvmrlj0wIuMn</td>\n",
+       "      <td>啊啊啊啊，我也蹲一个。四年后毕业。</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[journalism-favors-new-media-jobs, tier-1-citi...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               custom_id                                            content  \\\n",
+       "0  AkDAFULrD7GTJdWvSE8TN                                        报纸 科技媒体 互联网   \n",
+       "1  sViYNRTOSjTcxXPEL2ykH  知乎的神奇之处在于，会帮你记录来时的路时间来到了2024，距离第二次回答也已经3年，真弹指一...   \n",
+       "2  aD9e51cniLKXotH1AyMZ2  21年毕业的，这几天面临失业危机了，想找几个同学问问他们的现状，了解一下新闻学的就业行情。当...   \n",
+       "3  3S51njyrremig0DMNLY-S  目前刚被录取，还没入学军训我知道社会对新闻学的评价哈哈哈哈哈被调剂来的，是命运让我来到这里～...   \n",
+       "4  r4ro9pzQ9xvmrlj0wIuMn                                  啊啊啊啊，我也蹲一个。四年后毕业。   \n",
+       "\n",
+       "                                               agree  \\\n",
+       "0                                                 []   \n",
+       "1  [journalism-favors-new-media-jobs, experience-...   \n",
+       "2                                                 []   \n",
+       "3                 [journalism-favors-new-media-jobs]   \n",
+       "4                                                 []   \n",
+       "\n",
+       "                                            disagree  \\\n",
+       "0                                                 []   \n",
+       "1                                                 []   \n",
+       "2  [journalism-favors-new-media-jobs, tier-1-citi...   \n",
+       "3                                                 []   \n",
+       "4                                                 []   \n",
+       "\n",
+       "                                             neutral  \n",
+       "0  [journalism-favors-new-media-jobs, tier-1-citi...  \n",
+       "1  [tier-1-cities-offer-more-jobs, education-leve...  \n",
+       "2                                                 []  \n",
+       "3  [tier-1-cities-offer-more-jobs, experience-mat...  \n",
+       "4  [journalism-favors-new-media-jobs, tier-1-citi...  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "processed_df = merged_df.dropna(subset=['agree', 'disagree', 'neutral'])\n",
+    "processed_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "processed_df.to_csv(\"..\\\\data\\\\task4\\\\zhihu_get_opinion.csv\", index=False, encoding='utf-8')"
    ]
   }
  ],
